# VisualSQL

./: CMakeLists.txt  Column.cpp  Column.hpp  GraphElements.hpp  MySqlGenerator.cpp  MySqlGenerator.hpp  PostgreSqlGenerator.cpp  PostgreSqlGenerator.hpp  ProjectSerializer.cpp  ProjectSerializer.hpp  README.md  Schema.cpp  Schema.hpp  SqlGenerator.cpp  SqlGenerator.hpp  SqlTypes.cpp  SqlTypes.hpp  Table.cpp  Table.hpp  main.cpp
libs/imgui/examples/example_glfw_wgpu/: CMakeLists.txt
libs/imgui/examples/example_sdl2_wgpu/: CMakeLists.txt
libs/imgui/examples/example_sdl3_wgpu/: CMakeLists.txt
